<resources>
    <string name="app_name">Not A Fancy Android App</string>
    <string name="app_name_acronym">NAFAA</string>
    <string name="action_settings">Settings</string>
    <string name="secret_string">This is a secret string</string>
    <string name="login_btn_string">Secure Login</string>
    <string name="unsecure_login_btn_string">Unsecure Login</string>
    <string name="encrypted_btn_string">Encrypted Login</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="host_hint">Server Hostname/URL</string>
    <string name="profile_title">Welcome</string>
    <string name="bad_auth">Username or Password are incorrect…</string>
    <string name="empry_pass_or_username">Username and Password can\'t be empty</string>
    <string name="error_generating_shared_key">Error generating shared key with server :(</string>
    <string name="verifying_data">Verifying data…</string>
    <string name="generating_shared_secret">Generating shared secret…</string>
</resources>
